feat(mongodb): 重构MongoDB配置结构并添加模式支持
- 将MongoDB配置类移动到config/mongo子目录
- 添加MongoMode枚举定义数据库连接模式
- 更新测试类引用路径以匹配新结构